--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,6 @@
 #Grails Metadata file
-#Wed Nov 02 22:28:02 CET 2011
-app.grails.version=2.0.0.RC1
+#Fri Jan 13 09:51:09 CET 2012
+app.grails.version=2.0.0
+app.name=grails-hibernate-search-plugin
+plugins.hibernate=2.0.0
 plugins.svn=1.0.0.M1
