--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Jan 13 09:51:09 CET 2012
-app.grails.version=2.0.0
+#Mon Apr 02 19:48:23 CEST 2012
+app.grails.version=2.0.2
 app.name=grails-hibernate-search-plugin
-plugins.hibernate=2.0.0
+plugins.hibernate=2.0.2
 plugins.svn=1.0.0.M1
