Grails Hibernate Search plugin for Grails 3.1.x

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-*/target
-target
-*.project
-*.settings
-*.classpath
+Thumbs.db
+.DS_Store
+.gradle
+build/
+classes/
+.idea
 *.iml
 *.ipr
 *.iws
-*.swp
-*.log
-*/rebel.xml
-*/lucene
-lucene
-.idea
-.DS_Store
+.project
+.settings
+.classpath
