preconfigure gradle for central publish

--- a/build.gradle
+++ b/build.gradle
@@ -81,15 +81,15 @@ dependencies {
 }
 
 grailsPublish {
-	user = '????'
-	key = '????'
+	// user/key: useless, see https://medium.com/@benorama/how-to-publish-your-grails-3-plugin-to-bintray-c341b24f567d#.elz43j5nq
+	user = 'lgrignon'
+//	key = '????'
+	userOrg = 'idcapture'
 	githubSlug = 'mathpere/grails-hibernate-search-plugin'
 	license { name = 'Apache-2.0' }
 	title = "Grails Hibernate Search Plugin"
 	desc = "This plugin aims to integrate Hibernate Search features to Grails in very few steps."
 	developers = [mathpere: "Mathieu Perez", lgrignon: "Louis Grignon"]
-	portalUser = ""
-	portalPassword = ""
 }
 
 
