fixed bintray repo & name

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,41 @@ grailsPublish {
 	developers = [mathpere: "Mathieu Perez", lgrignon: "Louis Grignon"]
 }
 
+bintray {
+  pkg {
+    name = "hibernate-search"
+  }
+}
+
+
+publishing {
+	publications {
+		mavenJar(MavenPublication) {
+			groupId 'org.grails.plugins'
+			artifactId 'hibernate-search'
+
+			pom.withXml {
+				def pomNode = asNode()
+				
+				pomNode.appendNode('description',
+					'Grails 3.2.x plugin for Hibernate Search')
+				
+				pomNode.dependencyManagement.replaceNode {}
+
+				// simply remove dependencies without a version
+				// version-less dependencies are handled with dependencyManagement
+				// see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/8 for more complete solutions
+				pomNode.dependencies.dependency.findAll {
+					it.version.text().isEmpty()
+				}.each {
+					it.replaceNode {}
+				}
+			}
+
+			from components.java
+		}
+	}
+}
 if (project.hasProperty('hibernateSearchMavenUser') && project.hasProperty('hibernateSearchMavenPassword') && project.hasProperty('hibernateSearchMavenRepoUrl')) {
 	println "Configure publish tasks"
 	publishing {
@@ -103,32 +138,7 @@ if (project.hasProperty('hibernateSearchMavenUser') && project.hasProperty('hibe
 				url "$hibernateSearchMavenRepoUrl/libs-release-local"
 			}
 		}
-		publications {
-			mavenJar(MavenPublication) {
-				groupId 'org.grails.plugins'
-				artifactId 'hibernate-search'
-
-				pom.withXml {
-					def pomNode = asNode()
-					
-					pomNode.appendNode('description',
-						'Grails 3.2.x plugin for Hibernate Search')
-					
-					pomNode.dependencyManagement.replaceNode {}
-
-					// simply remove dependencies without a version
-					// version-less dependencies are handled with dependencyManagement
-					// see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/8 for more complete solutions
-					pomNode.dependencies.dependency.findAll {
-						it.version.text().isEmpty()
-					}.each {
-						it.replaceNode {}
-					}
-				}
-
-				from components.java
-			}
-		}
+		
 	}
 }
 
