--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,6 @@ apply plugin:"asset-pipeline"
 
 ext {
 	grailsVersion = project.grailsVersion
-	gradleWrapperVersion = project.gradleWrapperVersion
 }
 
 configurations {
@@ -56,7 +55,7 @@ dependencies {
 	compile "org.grails.plugins:cache"
 	compile "org.grails.plugins:scaffolding"
 
-	compile "org.grails.plugins:hibernate5:6.1.4"
+	compile "org.grails.plugins:hibernate5:${project.gormVersion}"
 	compile 'org.grails.plugins:cache'
 	
 	compile "org.hibernate:hibernate-core:5.2.9.Final"
