--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,22 @@
 buildscript {
-	ext { grailsVersion = project.grailsVersion }
 	repositories {
 		mavenLocal()
 		maven { url "https://repo.grails.org/grails/core" }
 	}
 	dependencies {
 		classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-		classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.4"
+		classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
 	}
 }
 
-version "2.2.1"
+
+version "2.3.0-SNAPSHOT"
 group "org.grails.plugins"
 
-apply plugin: 'java'
-apply plugin: 'groovy'
 apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"org.grails.grails-plugin"
 apply plugin:"org.grails.grails-plugin-publish"
-apply plugin:"org.grails.grails-gsp"
-apply plugin:"asset-pipeline"
 
 ext {
 	grailsVersion = project.grailsVersion
@@ -34,48 +30,50 @@ groovydoc {
 	groovyClasspath = project.configurations.groovydocconf
 }
 
+jar {
+	exclude 'hibernate.search/**'
+}
+
 repositories {
 	mavenLocal()
 	maven { url "https://repo.grails.org/grails/core" }
-}
-
-dependencyManagement {
-	imports { mavenBom "org.grails:grails-bom:$grailsVersion" }
-	applyMavenExclusions false
 }
 
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-logging"
 	compile "org.springframework.boot:spring-boot-autoconfigure"
 	compile "org.grails:grails-core"
-	compile "org.springframework.boot:spring-boot-starter-actuator"
-	compile "org.springframework.boot:spring-boot-starter-tomcat"
-	compile "org.grails:grails-dependencies"
-	compile "org.grails:grails-web-boot"
-	compile "org.grails.plugins:cache"
-	compile "org.grails.plugins:scaffolding"
+	compile "org.grails:grails-logging"
 
-	compile "org.grails.plugins:hibernate5:${project.gormVersion}"
-	compile 'org.grails.plugins:cache'
+	compile "org.grails.plugins:hibernate5"
+	compile "org.hibernate:hibernate-core:5.2.10.Final"
+	compile "org.hibernate:hibernate-ehcache:5.2.10.Final"
 	
-	compile "org.hibernate:hibernate-core:5.2.9.Final"
-	compile "org.hibernate:hibernate-ehcache:5.2.9.Final"
-	
-	compile('org.hibernate:hibernate-search-orm:5.7.0.Final')
+	compile('org.hibernate:hibernate-search-orm:5.9.1.Final')
 	
 	console "org.grails:grails-console"
-	profile "org.grails.profiles:web-plugin"
+	profile "org.grails.profiles:plugin"
+
 	provided "org.grails:grails-plugin-services"
 	provided "org.grails:grails-plugin-domain-class"
-	runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.4"
+	provided "org.grails:grails-plugin-datasource"
+	provided "org.springframework.boot:spring-boot-starter-actuator"
+	provided "org.springframework.boot:spring-boot-starter-tomcat"
+	provided "org.grails:grails-web-boot"
+
 	testCompile "org.grails:grails-plugin-testing"
 	testCompile "org.grails.plugins:geb"
 	testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
 	testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 	
 	groovydocconf 'org.fusesource.jansi:jansi:1.13'
-	groovydocconf 'org.codehaus.groovy:groovy-all:2.4.10'
+	groovydocconf 'org.codehaus.groovy:groovy-all:2.4.12'
 
+}
+
+bootRun {
+	jvmArgs('-Dspring.output.ansi.enabled=always')
+	addResources = true
 }
 
 grailsPublish {
@@ -93,7 +91,6 @@ bintray {
     name = "hibernate-search"
   }
 }
-
 
 publishing {
 	publications {
@@ -138,8 +135,6 @@ if (project.hasProperty('hibernateSearchMavenUser') && project.hasProperty('hibe
 		
 	}
 }
-
-assets { packagePlugin = true }
 
 task dumpDependencies {
     doLast {
